--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-mobile-store-button": "0.0.6",
     "react-native": "^0.63.2",
     "react-scripts": "^3.4.3"
   },
