Add Taylors page

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^16.13.1",
     "react-mobile-store-button": "0.0.6",
     "react-native": "^0.63.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3"
   },
   "scripts": {
